2007-12-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/libgviewer/search-dlg.cc:
	* src/libgviewer/viewer-window.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-taglib.cc:
	Fix for problem #502756 (translation)


2007-12-10  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-remote-dialog.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Made dlg windows resize vertically

2007-12-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-remote-dialog.cc:
	Removed excessive ftp code

2007-12-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-dialog.cc:
	Added gnome_cmd_con_make_uri() function and ..._*_uri() derivatives

2007-11-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Added uri_is_valid() function for URI verification

2007-11-29  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file.cc:
	Fixed problem #490431 (view files with name containing '%')

2007-11-26  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-xfer.cc:
	Fix for crash when moving file with % in the name

2007-11-21  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-dialog.h:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	Brand new dlg for connection details

	* src/gnome-cmd-con-dialog.cc:
	Use proper type for #define GNOME_CMD_TYPE_CONNECT_DIALOG

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-remote-dialog.cc:
	* src/gnome-cmd-remote-dialog.h:
	* src/gnome-cmd-user-actions.cc:
	Rename GnomeCmdFtpDialog -> GnomeCmdRemoteDialog

2007-11-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	Store connections as URI in ~/.gnome-commander/connections
